--- a/mawaru.html
+++ b/mawaru.html
@@ -2,6 +2,7 @@
 <html> <head>
 <title>mawaru yatsu</title>
 
+<!--[if IE]><script type="text/javascript" src="/excanvas.compiled.js"></script><![endif]-->
 <script>
 var balls = [];
 var prevExpr = "(n+3)*0.1";
@@ -69,6 +70,6 @@ function paint() {
 <hr>
 <address></address>
 <!-- hhmts start -->
-Last modified: Sat Jun 27 01:32:24 JST 2009
+Last modified: Sat Jun 27 01:49:00 JST 2009
 <!-- hhmts end -->
 </body> </html>
