Show the max score

--- a/streams.html
+++ b/streams.html
@@ -174,7 +174,7 @@ function show() {
       score_detail = scores.join('+');
     }
   }
-  $('score').innerHTML = score + ' (' + score_detail + ')';
+  $('score').innerHTML = max_score + ' (' + score_detail + ')';
 
   $('cp').innerHTML = ('seed' + $('seed').value + ' ' +
                        $('score').innerHTML + ' ' +
